--- a/css/style.css
+++ b/css/style.css
@@ -758,6 +758,11 @@ footer .social a:not(:last-child) {
   text-align: center;
 }
 
+#blurbs .grid-content h1,
+#blurbs .grid-content p {
+  padding-bottom: 3rem;
+}
+
 #blurbs .grid-content p {
   width: 80%;
   margin: auto;
@@ -801,6 +806,10 @@ footer .social a:not(:last-child) {
 
 #gallery .grid-content {
   text-align: center;
+}
+
+#gallery .grid-content h1 {
+  padding-bottom: 3rem;
 }
 
 #gallery .gallery-container {
@@ -867,6 +876,10 @@ footer .social a:not(:last-child) {
   text-align: center;
 }
 
+#pricing .grid-content h1 {
+  padding-bottom: 3rem;
+}
+
 #pricing .grid-content .blurb-container {
   gap: 3rem;
 }
@@ -901,6 +914,10 @@ footer .social a:not(:last-child) {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
+}
+
+#about .grid-content .about-headline {
+  padding-bottom: 3rem;
 }
 
 #about .grid-content .about-content {
